staging/calc-translation/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: calc-translation-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`translator.home.my-uam.com`)
      kind: Rule
      services:
        - name: calc-translation-server
          port: 8000
  tls:
    secretName: calc-translation-certificate-secret
